# phosh-wallpapers

./: .gitignore  .gitlab-ci.yml  NEWS  README.md  meson.build  phosh-wallpapers.doap
debian/: changelog  control  copyright  phosh-wallpapers.install  plymouth-theme-phosh.alternatives  plymouth-theme-phosh.install  sound-theme-phosh.install
plymouth/: meson.build  phosh.plymouth.in  phosh.script
sounds/: index.theme  meson.build
sounds/stereo/: meson.build
wallpapers/: byzantium-abstract.xml.in  logo.xml.in  meson.build  phosh-byzantium-abstract.xml.in  phosh-logo.xml.in
